--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Kwento Studios is composed of five juniors based in the Arts and Design strand of De la Salle Santiago Zobel - Vermosa. It was formed for a project in Media Literature, but as artists, we wanted to put in our 100 percent. Our documentary is the result of the opportunity we took to make use of our passions for a purpose. </p>
+          <p><b>Kwento Studios</b> is composed of five juniors based in the Arts and Design strand of De la Salle Santiago Zobel - Vermosa. It was formed for a project in Media Literature, but as artists, we wanted to put in our 100 percent. Our documentary is the result of the opportunity we took to make use of our passions for a purpose. </p>
         </div>
       </div>
     </div>
