--- a/about.html
+++ b/about.html
@@ -74,8 +74,17 @@
           <p>Kwento Studios is composed of five juniors based in the Arts and Design strand of De la Salle Santiago Zobel - Vermosa. It was formed for a project in Media Literature, but as artists, we wanted to put in our 100 percent. Our documentary is the result of the opportunity we took to make use of our passions for a purpose. </p>
           <p>"Indolence: The Student Syndrome" isn't what it seems. At first, it claims to be covering the epidemic of student laziness (with the helpful use of the Framing Theory). However, as the documentary progresses, one realizes that the students aren't as guilty as they seem; they're all just stressed due to school. This film is our response against the school system and its expectations, coming from the pain of real experience.</p>
           <h2> The Members </h2>
+          <br/>
           <h3> Bianca Aguilar </h3>
-          <p> I am dead. </p>
+          <p> I am someone who does many things! Too hyperactive for my own good. Also sleep is an abstract concept :( </p>
+          <h3> Eliza Bumanlag </h3>
+          <p> ALCOHOL IS GOOD FOR YOU </p>
+          <h3> Alyssa de Mesa </h3>
+          <p> I'M GAY </p>
+          <h3> Kei Gonzales </h3>
+          <p> NYEH </p>
+          <h3> Kyla Jimenez </h3>
+          <p> SPIKE ME </p>
         </div>
       </div>
     </div>
