--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
           <h3> Kei Gonzales </h3>
           <p> NYEH </p>
           <h3> Kyla Jimenez </h3>
-          <p> SPIKE ME </p>
+          <p> SPIKE ME! </p>
         </div>
       </div>
     </div>
