--- a/post.html
+++ b/post.html
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <iframe width="420" height="315"
+            <iframe 
             src="https://www.youtube.com/watch?v=WkPioWcyfRs&feature=youtu.be">
             </iframe>
             <!--
