--- a/post.html
+++ b/post.html
@@ -75,7 +75,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
+          <center>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/WkPioWcyfRs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </center>
             <!--
             <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
 
