--- a/about.html
+++ b/about.html
@@ -76,15 +76,17 @@
           <h2> The Members </h2>
           <br/>
           <h3> Bianca Aguilar </h3>
-          <p> I am someone who does many things! Too hyperactive for my own good. Also sleep is an abstract concept :( </p>
+          <p> Bianca Aguilar is too ambitious for her own good. She also needs to catch up on years of sleep. </p>
           <h3> Eliza Bumanlag </h3>
-          <p> ALCOHOL IS GOOD FOR YOU </p>
+          <p> Eliza Bumanlag is a hardworking student but spends her time wisely by crying and doing projects at the same time. Being a student of the Arts and Design Strand, she loves absolutely loves performing arts. </p>
           <h3> Alyssa de Mesa </h3>
-          <p> I'M GAY </p>
+          <p> Alyssa de Mesa is a female student who loves to write.  </p>
           <h3> Kei Gonzales </h3>
-          <p> NYEH </p>
+          <p> Kei Gonzales invests her time on photography, studying, sleeping and eating and also likes dogs.</p>
           <h3> Kyla Jimenez </h3>
-          <p> SPIKE ME! </p>
+          <p> Kyla Isabelle Jimenez is a straight female student and currently in senior high school in the Arts and Design strand. Even though people think of her as a theatre kid, she wants to create cartoons for a living. </p>
+          <h3> Kat Costales </h3>
+          <p>Katrina Isabelle Rivera Costales is currently musing over her own emotional and mental state while all the while trying not to fawn over fictional worlds and beings.<p>
         </div>
       </div>
     </div>
