--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
     <footer>
       <div class="container">
         <div class="row">
+          <center>
             <p class="copyright text-muted">Copyright &copy; Kwento Studios 2018</p>
+          </center>
         </div>
       </div>
     </footer>
