--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     <footer>
       <div class="container">
         <div class="row">
-          <center>
+          <div class="col-lg-8 col-md-10 mx-auto">
             <p class="copyright text-muted">Copyright &copy; Kwento Studios 2018</p>
-          </center>
+          </div>
         </div>
       </div>
     </footer>
