--- a/post2.html
+++ b/post2.html
@@ -62,8 +62,8 @@
               <h1>Indolence: The Student Syndrome</h1>
               <h2 class="subheading">A Media Literature Documentary</h2>
               <span class="meta">Posted by
-                <a href="#">Kwento Studios</a>
-                on March 27, 2018</span>
+                <a href="#">Kei Gonzales</a>
+                on April 4, 2018</span>
             </div>
           </div>
         </div>
