--- a/post6.html
+++ b/post6.html
@@ -77,55 +77,19 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <p>Can society ever change? Time and time again have we asked ourselves that question. Yet every time we do, it seems we never did learn that hard lesson.</p>
 
-    <p>One must ask themselves on who they really are. Are they defined by their desires? jobs? hobbies? A factor on this lies in the modern day society. Many young people often bow down to these stereotypes all the while despising the status quo; in order to avoid becoming like a pariah. Our culture shapes our society and it is very evident in the world around us.</p>
-
-    <p>Movies, television, songs and the like all have a sphere of influence. Whatever the creator thinks, it will be expressed in a form of media. The masses, which consume the aforementioned media, often believe this as a truth in a sense. Western Movies often stereotype blondes as “stupid” sex symbols, “macho” white males as a hero in any modernized setting. It’s peculiar to point out how poor representation translates onto the big screen and its mobile counterparts, as not many could be found with an awareness.</p>
-
-    <p>Society too, stereotypes this not only on race, but on students as well. Art and Communication majors are not often encouraged in Asian households, which can be contributed to a subjective evaluation which is not so in other strands which involve straight calculations and analysis. Passion and desire are not so very well understood from an outside perspective. A STEM track student might be seen as ambitious, “leader to new discovery”, an ABM to be seen as a “good business person” in the future, as the implicated jobs give out a large income whereas A&D students struggle with the persecution of being “academically talentless and rebellious.”</p>
-
-    <p>While fastidiousness at doubt, there is atleast a kernel of truth behind every rumour and myth, but it is not right to say it is good for society as a whole. Stereotypes while existent, should not be society’s basis for character judgement. Occupation and Strand Selection are not reflectant all the time of a being’s personality and desires.</p>
-
-    <p>Society is a reflection of ourselves. It lives in our culture and eyes. One can never escape judgement fully, but perhaps we ourselves, who are the new generation can rectify that, little by little. Just as society is a mirror, our future will mirror the actions of people. Society can change if people can change.</p>
+              <p> One must ask themselves on who they really are. Are they defined by their desires? Jobs? Hobbies? A factor of this lies in the modern day society. Many young people often bow down to these stereotypes. At the same time, they despise the status quo. This happens because they want to avoid becoming like a pariah. Our culture shapes our society and it is very evident in the world around us.</p>
 
 
-            <!--
-            <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+    <p>Movies, television, songs and the like all have a sphere of influence. Whatever the creator thinks can be expressed in a form of media. The masses, which consume the aforementioned media, often believe this as a truth in a sense. Western movies often stereotype blondes as “stupid” sex symbols, while “macho” white males are heroes. It’s peculiar to point out how poor representation translates onto the big screen and its mobile counterparts. This is because not many are aware of this.</p>
 
-            <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
+    <p>Society places stereotypes not only on race, but on subjects as well. For example, Art and Communication majors are discouraged in Asian households. This can be linked to a stigma of majors that are seen as unsuccessful in jobseeking. Passion and desire are not well understood from an outside perspective. A STEM track student can be seen as ambitious “leader to new discovery”. An ABM can be seen as a “good business person” in the future. These implicated jobs give out a large income. Meanwhile, A&D students struggle with the persecution of being “academically talentless and rebellious.”</p>
 
-            <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
+    <p>There is at least a kernel of truth behind every rumour and myth, but it is not right to say it is good for society as a whole. Stereotypes should not be society’s basis for character judgement. Occupation and strand selection do not constantly reflect one's personality and desires.</p>
 
-            <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not help but love and cherish her.</p>
+    <p>Society is a reflection of ourselves. It lives in our culture and eyes. One can never escape judgement fully, but perhaps we ourselves, the new generation, can rectify that little by little. Just as society is a mirror, our future will mirror the actions of people. Society can change if people can change.</p>
 
-            <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
 
-            <h2 class="section-heading">The Final Frontier</h2>
 
-            <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-            <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-            <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
-
-            <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
-
-            <h2 class="section-heading">Reaching for the Stars</h2>
-
-            <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-
-            <a href="#">
-              <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
-            </a>
-            <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
-
-            <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-
-            <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-            <p>Placeholder text by
-              <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-              <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
-            -->
           </div>
         </div>
       </div>
