--- a/post1.html
+++ b/post1.html
@@ -85,7 +85,7 @@
 
   <p>Overall, an expensive education is unfair to students. This is because all this exorbitant expense makes education seem as a privilege, adds only to the numerous other expenses of a family, and makes the student stressed. Why is a humongous price the status quo? Are students and their families really okay with suffering from debts? I believe that if an education is costly, it is meant to profit the institution and not its students. Shouldn’t the school seek to benefit its students? Education is not a commodity, but a priceless thing; without proper change, however, the world will continue to undervalue it, and as a result, the lives of countless students.</p>
 
-  <p> Sources:
+  <p class="source"> Sources:
     <br/>
     https://en.unesco.org/themes/right-to-education
     <br/>
