--- a/post3.html
+++ b/post3.html
@@ -83,7 +83,7 @@
 
   <p>Sadly, there are various situations that show how big of an impact technology has on our mind and health. At this point of time, technology will never leave our hands; it will only get more advanced. We have to be wary of the effects of technology on ourselves. This way, we can use technology to a safer extent.</p>
 
-  <p>References:
+  <p class="source">References:
   <br/>
   Murdock, A. (2016, May 17). Consumers Spend More than 1 Billion Hours a Month Playing Mobile Games. Retrieved from http://www.vertoanalytics.com/consumers-spend-1-billion-hours-month-playing-mobile-games/
   <br/>
