--- a/post4.html
+++ b/post4.html
@@ -85,7 +85,7 @@
 
     <p>Media representation is powerful nowadays, especially due to its global accessibility.  It can be used for good, or for bad. It is strong enough to destroy images of a race, a gender, a religion, and even a species of animal. The media is currently taking over, flooding consumers with trends and news. We have to keep in mind that the more prevalent it is, the more harm it can cause. Representation in media can be good and bad, but that is all up to us.</p>
 
-    <p>Source: http://www.bbc.com/news/magazine-33049099</p>
+    <p class="source">Source: http://www.bbc.com/news/magazine-33049099</p>
 
 
           </div>
