--- a/post5.html
+++ b/post5.html
@@ -85,7 +85,7 @@
 
     <p>In conclusion, it is actually pretty simple to not assume things. It is pretty sad to know that people these days don’t really realize this. </p>
 
-    <p>Source:
+    <p class="source">Source:
       <br/>
 https://oureverydaylife.com/effects-lack-communication-relationship-25435.html</p>
 
