--- a/post5.html
+++ b/post5.html
@@ -81,13 +81,14 @@
 
   	<p>Second of all, we should not believe all the rumors or gossip we hear just because it’s well-known or trending. Even if it's human instinct to be social, agreeing with an assumption means we’d also believe that it's true. For example, some news companies only depict specific part of a trending topic. This can be done without an explanation as to why. Sadly, this is what the media does today. They would rather have commercialized reports for the sake of money. What we should do to avoid this is to ignore rumors. If there's still concern, look for the whole picture before deciding on an opinion. It’s better to understand the entire situation rather than to side with a popular opinion.</p>
 
-  	<p>Lastly, communication is key. If we don’t communicate, we won’t be able to understand a certain concern. According to Moore (n.d.), a lack of communication can lead  to misunderstandings, negative interactions, and reduced relationship satisfaction. Going back to the documentary, the narrator presumed that the students were just slackers. In actuality, they are dealing with their own problematic situations. </p>
+  	<p>Lastly, communication is key. If we don’t communicate, we won’t be able to understand a certain concern. According to Moore (n.d.), lack of communication or an unresolved conflict can lead  to misunderstandings, bad communication patterns or negative interactions, and deterioration or reduced relationship satisfaction. Going back to the documentary, the narrator presumed that the students were just slackers who would contribute nothing to society. In reality, they were dealing with their own problematic situations. If the narrator or the people in charge of that documentary did not confront them, they would continue to assume that students these days are just plain lazy. To be able to avoid having to burn bridges, all we have to do is to simply talk to each other whenever we have a concern. Bottling it up and complaining about the flaws of a certain person won't fix anything; it will instead make matters worse.
+ </p>
 
-    <p>In conclusion, it is actually pretty simple to not assume things. It is pretty sad to know that people these days don’t really realize this. </p>
+    <p>In conclusion, it is actually pretty simple to not assume things. All we have to do is to not judge things based on first impressions, to not believe in rumors, and to communicate with someone if there is a concern. It is pretty sad to know that people these days don’t really realize this. If people would stop assuming, the world would be a better place to live in. </p>
 
     <p class="source">Source:
       <br/>
-https://oureverydaylife.com/effects-lack-communication-relationship-25435.html</p>
+    Moore, A. (n.d.). The Effects of Lack of Communication in a Relationship. Retrieved from https://oureverydaylife.com/effects-lack-communication-relationship-25435.html</p>
 
 
 
